<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bertof.pitestremote.SetupConnection">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/connectionSetupTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:layout_weight="1"
            android:text="@string/connection_setup_text_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="@string/connection_setup_text_desc" />

        <TextView
            android:id="@+id/connectionSetupTextPrecautions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:layout_weight="1"
            android:text="@string/connection_setup_text_precautions"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="@string/connection_setup_text_precautions" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/hostnameTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hostname_hint"
                android:inputType="textUri"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/portTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Port"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tokenTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/token_hint"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/connectButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="asfasfafafsasf"
            android:onClick="connectButton_TestConnection"
            android:text="@string/connection_setup_connect_button"
            tools:text="@string/connection_setup_connect_button" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
